--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,14 @@ services:
     # set shared memory limit when using docker-compose
     shm_size: 128mb
     environment:
-      DOPPLER_TOKEN: "${DOPPLER_TOKEN}"
-      POSTGRES_USER: "${POSTGRES_USER}"
-      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRES_CRYPTOKEY": "${POSTGRES_CRYPTOKEY}"
-      PGDATA: /var/lib/postgresql/data/pgdata"
-      POSTGRES_INITDB_ARGS: "--locale-provider=icu --icu-locale=America/Denver"
-      POSTGRESQL_USERNAME_CONNECTION_LIMIT: 9001
-      POSTGRESQL_POSTGRES_CONNECTION_LIMIT: 9001
+      - DOPPLER_TOKEN="${DOPPLER_TOKEN}"
+      - POSTGRES_USER="${POSTGRES_USER}"
+      - POSTGRES_PASSWORD="${POSTGRES_PASSWORD}"
+      - POSTGRES_CRYPTOKEY"="${POSTGRES_CRYPTOKEY}"
+      - PGDATA=/var/lib/postgresql/data/pgdata"
+      - POSTGRES_INITDB_ARGS="--locale-provider=icu --icu-locale=America/Denver"
+      - POSTGRESQL_USERNAME_CONNECTION_LIMIT=9001
+      - POSTGRESQL_POSTGRES_CONNECTION_LIMIT=9001
     volumes:
       - ./pgdata:/var/lib/postgresql/data/pgdata
       # - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
