--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   postgres:
     container_name: postgres
     image: postgres:alpine
+    init: true
     build: .
     ports:
       - "5432:5432"
@@ -18,6 +19,7 @@ services:
       - POSTGRES_INITDB_ARGS="--locale-provider=icu --icu-locale=America/Denver"
       - POSTGRESQL_USERNAME_CONNECTION_LIMIT=9001
       - POSTGRESQL_POSTGRES_CONNECTION_LIMIT=9001
+      - FOO=bar
     volumes:
       - ./pgdata:/var/lib/postgresql/data/pgdata
       # - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
