--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - POSTGRES_PASSWORD="${POSTGRES_PASSWORD}"
       - POSTGRES_CRYPTOKEY"="${POSTGRES_CRYPTOKEY}"
       - PGDATA=/var/lib/postgresql/data/pgdata"
-      - POSTGRES_INITDB_ARGS="--locale-provider=icu --icu-locale=America/Denver"
+      # - POSTGRES_INITDB_ARGS="--locale-provider=icu --icu-locale=America/Denver"
       - POSTGRESQL_USERNAME_CONNECTION_LIMIT=9001
       - POSTGRESQL_POSTGRES_CONNECTION_LIMIT=9001
       - FOO=bar
