--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   postgres:
     container_name: postgres
-    image: postgres:alpine
+    image: postgres
     # init: true
     # build: .
     ports:
