--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,12 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_CRYPTOKEY=${POSTGRES_CRYPTOKEY}
       - PGDATA=/var/lib/postgresql/data/pgdata
-      # - POSTGRES_INITDB_ARGS="--locale-provider=icu --icu-locale=America/Denver"
+      - POSTGRES_INITDB_ARGS="--locale-provider=icu --icu-locale=America/Denver"
       - POSTGRESQL_USERNAME_CONNECTION_LIMIT=9001
       - POSTGRESQL_POSTGRES_CONNECTION_LIMIT=9001
     volumes:
       - ./pgdata:/var/lib/postgresql/data/pgdata
-      # - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
+      - ./init-user-db.sh:/docker-entrypoint-initdb.d/init-user-db.sh
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 1s
